@@ -16,7 +16,7 @@
 */
 /**
  *
- */ 
+ */
 	defined( 'XOOPS_INSTALL' ) or die();
 
 ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
