@@ -22,6 +22,7 @@ ImpressCMS ChangeLog
 * Improving content manager page display to use displayTarea instead of previewTarea (malanciault)
 * Changing sanitizeContentCss() to icms_sanitizeContentCss() (malanciault)
 * #2011730: Installer: Check for phpOpenID requirements on install (malanciault/skenow)
+* #2014053: Installer: Check for php5 on install (malanciault/skenow)
 
 '''Fixed'''
 * it was not possible to login using email address like v1.0 (vaughan)
